# Euterpea

./: .gitignore  ArrowWrap.hs  AudioonOSX.txt  Euterpea.cabal  Euterpea.lhs  License  PortAudioOnLinux.txt  PortAudioOnMac.txt  PortAudioOnWindows  ReadMe.txt  Setup.hs  TODO.txt
Control/Arrow/: ArrowP.lhs
Control/CCA/: ArrowP.lhs
Control/SF/: AuxFunctions.hs  MSF.lhs  SF.hs  SF.lhs
Euterpea/: Experimental.lhs  ExperimentalPlay.lhs
Euterpea/Examples/: Additive.hs  BasicSignalExamples.lhs  CRUD.hs  EnableGUI.hs  EuterpeaExamples.lhs  Instruments.hs  Interlude.hs  IntervalTrainer.lhs  LSystems.hs  MUI.hs  MUIExamples.lhs  MusicToSignal.lhs  NewResolutions.lhs  RandomMusic.hs  SSF.lhs  SelfSimilar.hs  SigFuns.hs  SoundCheck.hs  UIExamples.hs
Euterpea/IO/: Audio.hs  MIDI.hs  MUI.hs
Euterpea/IO/Audio/: BasicSigFuns.lhs  Basics.as  Basics.hs  CSound.lhs  IO.hs  ImportWav.hs  PortAudioChannel.hs  Render.hs  Types.hs
Euterpea/IO/MIDI/: ExportMidiFile.lhs  FromMidi.hs  FromMidi.lhs  GeneralMidi.hs  MidiIO.lhs  ToMidi.hs
Euterpea/IO/MUI/: FFT.hs  Guitar.hs  InstrumentBase.hs  InstrumentWidgets.hs  MidiWidgets.lhs  Piano.hs  SOE.hs  UIMonad.lhs  UISF.lhs  UISFCompat.lhs  Widget.lhs
Euterpea/Music/Note/: MoreMusic.hs  Music.hs  Performance.hs
Euterpea/Music/Signal/: Additive.hs  SigFuns.hs  SpectrumAnalysis.hs
HSoM/: AMAndFM.lhs  Additive.lhs  Algebra.lhs  Bitans.lhs  Class-tour.lhs  Effects.lhs  GeneralMidi.lhs  HSoM.bib  HSoM.lhs  IO.lhs  Induction.lhs  Interlude.lhs  Intro.lhs  LSystems.lhs  List-tour.lhs  MUI.lhs  MakeCode.bat  MakeTex.bat  Monads.lhs  MoreMusic.lhs  Music.lhs  Patterns.lhs  Performance.lhs  PhysicalModelling.lhs  Poly.lhs  Preface.lhs  QualifiedTypes.lhs  RandomMusic.lhs  SelfSimilar.lhs  SigFuns.lhs  Signals.lhs  SpectrumAnalysis.lhs  Syntax.lhs  ToMidi.lhs  myFormat.fmt  shading.sty
HSoM/Pics/: 19_2a.eps  19_2d.eps  ChildSong6.eps  aliasing_f.eps  aliasing_half-f.eps  aliasing_lowf5.eps  aliasing_lowf6.eps  bilexp.eps  chordBuilder.eps  cosine1.eps  equal_loudness_contour.eps  exponential.eps  frp-circuit.eps  gaussian.eps  glue.eps  linear.eps  mui0.eps  mui1.eps  poisson.eps  pr12.eps  pulse1.eps  sine_rms.eps  sine_spect1.eps  sinewave.eps  spectrum_map.eps  spectrum_mesh.eps  square1.eps  square2.eps  square_rms.eps  threenoteharm.eps  triangle_rms.eps
HSoM/pics/: 19_2b.eps  19_2c.eps  ComplexToPolar.eps  DAWBlockDiagram.eps  PerformBD.eps  TwelveToneTransformationsCropped.eps  aliasing_2f.eps  aliasing_lowf1.eps  aliasing_lowf2.eps  cauchy.eps  classes.eps  cosine2.eps  mui2.eps  muse_euterpe.eps  noaliasing.eps  pulse2.eps  sawtooth_rms.eps  self-sim.eps  sine1.eps  sine2.eps  sine_spect2.eps  sine_spect3.eps
Playground/: Arrows.hs  ExampleSigS.hs  RenderSigS.hs  SigC.hs  SigS.hs  SignalArrayTest.hs  SignalIteratedFunctionTest.hs  Vibrato.hs
System/Random/: Distributions.hs
Tests/: AllTests.hs  EuterpeaInstances.hs  EuterpeaTests.hs  RunAllTests.hs  testAll.py
Tests/MUI/: HaskellOx.lhs  HaskellOx.txt
Tests/Playback/: JitterTest.lhs  JitterTest.txt  PlayS.lhs
