name:		Euterpea
version:	1.0.0
Cabal-Version:  >= 1.8
license:	BSD3
license-file:	License
copyright:      Copyright (c) 2008-2014 Paul Hudak
category:	Sound
stability:      experimental
build-type:     Custom
author:         Paul Hudak <paul.hudak@yale.edu>, 
                Eric Cheng <eric.cheng@aya.yale.edu>,
                Hai (Paul) Liu <hai.liu@aya.yale.edu>
maintainer:     Paul Hudak <paul.hudak@yale.edu>, 
                Donya Quick <donya.quick@yale.edu>,
                Dan Winograd-Cort <daniel.winograd-cort@yale.edu>
bug-reports:    mailto:paul.hudak@yale.edu
homepage:       http://haskell.cs.yale.edu/
synopsis:	Library for computer music research and education
description:
        Euterpea is a domain-specific language embedded in Haskell for 
        computer music research, education, and development, providing
        both note-level and signal-level abstractions.  It is a descendant
        of Haskore and HasSound, and is intended for both educational purposes
        as well as serious computer music applications.  Euterpea is a 
        wide-spectrum DSL, suitable for high-level music representation, 
        algorithmic composition, and analysis; mid-level concepts such as 
        MIDI; and low-level audio processing, sound synthesis, and instrument
        design.  It also includes a "musical user interface," a set of 
        computer-music specific GUI widgets such as keyboards, pushbuttons, 
        sliders, and so on.  The performance of Euterpea is intended to be 
        as good as any other computer music language, with the goal of being 
        able to develop real-time applications, using both MIDI and a 
        high-performance back-end for real-time audio.  
extra-source-files:
	ReadMe.txt,
        ArrowWrap.hs,
        Examples/EnableGUI.hs,
	HSoM/HSoM.lhs,
        HSoM/Preface.lhs,
        HSoM/Intro.lhs,
        HSoM/Music.lhs,
        HSoM/Poly.lhs,
        HSoM/Interlude.lhs,
        HSoM/Syntax.lhs,
        HSoM/MoreMusic.lhs,
        HSoM/QualifiedTypes.lhs,
        HSoM/Performance.lhs,
        HSoM/SelfSimilar.lhs,
        HSoM/Induction.lhs,
        HSoM/Algebra.lhs,
        HSoM/LSystems.lhs,
        HSoM/RandomMusic.lhs,
        HSoM/ToMidi.lhs,
        HSoM/IO.lhs,
        HSoM/Monads.lhs,
        HSoM/MUI.lhs,
        HSoM/Signals.lhs,
        HSoM/SigFuns.lhs,
        HSoM/SpectrumAnalysis.lhs,
        HSoM/Additive.lhs,
        HSoM/List-tour.lhs,
        HSoM/Class-tour.lhs,
        HSoM/Bitans.lhs,
        HSoM/Patterns.lhs,
        HSoM/myFormat.fmt,
        HSoM/soe.bib

Test-Suite test-euterpea
    type:           exitcode-stdio-1.0
    Hs-Source-Dirs: Tests
    Main-Is:        RunAllTests.hs
    Ghc-Options:    -threaded
    test-module:    AllTests
    build-depends:  base, Euterpea, 
                    QuickCheck >= 2.6, Cabal >= 1.9.2, 
                    ansi-terminal

Library
  hs-source-dirs: .
  ghc-options: -O2 -funbox-strict-fields -fexcess-precision
  exposed-modules: 
        Euterpea,
        Euterpea.Experimental,
        Control.CCA.ArrowP,
        Control.SF.SF,
        Control.SF.AuxFunctions,
        Control.SF.MSF,
        Euterpea.Examples.EuterpeaExamples
        Euterpea.Examples.Interlude,
        Euterpea.Examples.Instruments,
        Euterpea.Examples.IntervalTrainer,
        Euterpea.Examples.LSystems,
        Euterpea.Examples.MUIExamples,
        Euterpea.Examples.MUI,
        Euterpea.Examples.MusicToSignal,
        Euterpea.Examples.NewResolutions,
        Euterpea.Examples.RandomMusic, 
        Euterpea.Examples.SelfSimilar,
        Euterpea.Examples.SoundCheck,
        Euterpea.Examples.SSF,
        Euterpea.Examples.UIExamples,
        Euterpea.Examples.SigFuns,
        Euterpea.Examples.Additive,
        Euterpea.IO.Audio.Basics,
        Euterpea.IO.Audio.BasicSigFuns,
        Euterpea.IO.Audio.IO,
        Euterpea.IO.Audio.Render,
        Euterpea.IO.Audio.Types,
        Euterpea.IO.Audio.CSound,
        Euterpea.IO.Audio,
        Euterpea.IO.MIDI.MidiIO, 
        Euterpea.IO.MIDI.FromMidi,
        Euterpea.IO.MIDI.GeneralMidi,
        Euterpea.IO.MIDI.ToMidi,
        Euterpea.IO.MIDI.ExportMidiFile,
        Euterpea.IO.MIDI,
        Euterpea.IO.MUI.SOE,
        Euterpea.IO.MUI.UIMonad,
        Euterpea.IO.MUI.UISF,
        Euterpea.IO.MUI.Widget,
        Euterpea.IO.MUI.MidiWidgets,
        Euterpea.IO.MUI.InstrumentWidgets,
        Euterpea.IO.MUI.InstrumentBase,
        Euterpea.IO.MUI.Guitar,
        Euterpea.IO.MUI.Piano,
        Euterpea.IO.MUI,
        Euterpea.Music.Note.MoreMusic,
        Euterpea.Music.Note.Music,
        Euterpea.Music.Note.Performance,
        Euterpea.Music.Signal.SpectrumAnalysis,
        System.Random.Distributions
  other-modules:
  build-depends:
        base >= 3 && < 5, array, bytestring, random,
        mtl, containers, markov-chain, 
        CCA >= 0.1.3, GLFW == 0.5.*, OpenGL, PortMidi, 
        HCodecs >= 0.2, heap == 0.6.0, 
        template-haskell, haskell-src-exts >= 1.14.0,
        monadIO, deepseq,
        pure-fft,
        stm
  if (impl(ghc >= 6.10))
    build-depends: base >= 4 && < 5, syb, ghc-prim
